--- a/deploy/crds/apps.krome.io_statefulsets_crd.yaml
+++ b/deploy/crds/apps.krome.io_statefulsets_crd.yaml
@@ -1,20 +1,20 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: statefulsets.apps.krome.io
+  name: StatefulSets.apps.krome.io
 spec:
   group: apps.krome.io
   names:
-    kind: Statefulset
-    listKind: StatefulsetList
-    plural: statefulsets
-    singular: statefulset
+    kind: StatefulSet
+    listKind: StatefulSetList
+    plural: StatefulSets
+    singular: StatefulSet
   scope: Namespaced
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
-      description: Statefulset is the Schema for the statefulsets API
+      description: StatefulSet is the Schema for the StatefulSets API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -29,10 +29,10 @@ spec:
         metadata:
           type: object
         spec:
-          description: StatefulsetSpec defines the desired state of Statefulset
+          description: StatefulSetSpec defines the desired state of StatefulSet
           type: object
         status:
-          description: StatefulsetStatus defines the observed state of Statefulset
+          description: StatefulSetStatus defines the observed state of StatefulSet
           type: object
       type: object
   version: v1
